# elon-marketing

./: .env.example  .gitignore  ABOUT.md  Dockerfile  README.md  architecture-graph.html  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: bootstrap.sh
site/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
site/app/: globals.css  layout.tsx  page.tsx
site/app/demo/: page.tsx
site/components/: AnalyticsInsight.tsx  CTA.tsx  ComingSoon.tsx  DataContentEngine.tsx  Demo.tsx  ElonOverview.tsx  Examples.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  MemoryFeedbackLoop.tsx  Stack.tsx  Stats.tsx  Steps.tsx  TrendIntelligence.tsx
site/lib/: copy.ts
site/public/: CNAME
src/elon/agent/: loop.py  system_prompt.py  tools.py
src/elon/analytics/: anomaly.py  pullers.py
src/elon/api/: deps.py  main.py
src/elon/chat/: approvals.py  notify.py  telegram_bot.py  whatsapp.py
src/elon/competitor/: gaps.py  scraper.py
src/elon/content/: draft.py  planner.py
src/elon/core/: db.py  ids.py  llm.py  logging.py  models.py  ratelimit.py  security.py  settings.py  spend.py  storage.py  telemetry.py  tenant_queues.py
src/elon/experiments/: pruner.py  runner.py
src/elon/ingestor/: brand.py  visual.py  (+1 more)
tests/: conftest.py
tests/integration/: conftest.py  test_tenant_flow.py
tests/unit/: test_anomaly.py  test_crisis_playbooks.py  test_draft_schema.py  test_planner.py  test_security.py  test_voice.py  test_weights_bounds.py
web/: package.json  playwright.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Nav.tsx
web/e2e/: brand.spec.ts  drafts.spec.ts  login.spec.ts
web/lib/: api.ts
(+44 files in other folders)
